# CodeReviewMate

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: codereviewmate.yml
src/codereviewmate/: __init__.py  __main__.py
src/codereviewmate/cli/: app.py  config_cmd.py  ingest_cmd.py  knowledge_cmd.py  review_cmd.py  tutor_cmd.py
src/codereviewmate/core/config/: defaults.py  manager.py
src/codereviewmate/core/context/: embedder.py  engine.py  ingestion.py  reranker.py  retriever.py  vector_store.py
src/codereviewmate/core/events/: bus.py  events.py
src/codereviewmate/core/knowledge/: engine.py  extractor.py  graph.py  standards.py  tutor.py  visualization.py
src/codereviewmate/core/llm/: base.py  claude.py  factory.py  ollama.py  openai_adapter.py
src/codereviewmate/core/llm/prompts/: deep_arch.j2  extract_knowledge.j2  review_system.j2  tutor.j2
src/codereviewmate/core/models/: config.py  document.py  knowledge.py  review.py
src/codereviewmate/core/review/: auto_fix.py  deep_review.py  pre_commit.py  report.py
src/codereviewmate/core/review/analyzers/: complexity.py  tree_sitter_analyzer.py
src/codereviewmate/core/review/rules/: base.py  bug_pattern.py  security.py  style.py
src/codereviewmate/integrations/git/: base.py  factory.py  gitee.py  github_.py  gitlab_.py  local.py
src/codereviewmate/server/: app.py
tests/: conftest.py
tests/unit/: test_config.py  test_events.py  test_models.py
tests/unit/test_context/: test_chunker.py  test_ingestion.py  test_retriever.py  test_vector_store.py
tests/unit/test_integrations/: test_git.py
tests/unit/test_knowledge/: test_engine.py  test_extractor.py  test_graph.py  test_standards.py  test_tutor.py
tests/unit/test_review/: test_auto_fix.py  test_deep_review.py  test_pre_commit.py  test_report.py  test_rules.py
