[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codereviewmate"
version = "0.1.0"
description = "智能代码审查与知识沉淀 Agent — 三层架构：上下文感知 + 审查执行 + 知识沉淀"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "CodeReviewMate Team" },
]
keywords = ["code-review", "knowledge-graph", "rag", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "anthropic>=0.30",
    "openai>=1.30",
    "networkx>=3.3",
    "pyvis>=0.3",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "tree-sitter>=0.22",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "httpx>=0.27",
    "pygithub>=2.3",
    "python-gitlab>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
codereviewmate = "codereviewmate.cli.app:main"
crm = "codereviewmate.cli.app:main"

[project.urls]
Homepage = "https://github.com/team/codereviewmate"
Documentation = "https://github.com/team/codereviewmate/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/codereviewmate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
